--- a/angular-example/index.html
+++ b/angular-example/index.html
@@ -24,12 +24,12 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Angular Routing Example</a>
+        <a class="navbar-brand" href="/">Angular Single Page Example</a>
       </div>
 
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-        <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
+        <li><a href="#about"><i class="fa fa-shield"></i> About Photo</a></li>
         <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
         <li><a href="#jobs">Jobs</a></li>
       </ul>
@@ -44,10 +44,8 @@
     
   </div>
   
-  <footer class="text-center">
-    <p>View the tutorial on <a href="http://scotch.io/tutorials/javascript/single-page-apps-with-angularjs-routing-and-templating">Scotch.io</a></p>
-  
-    <p>View a tutorial on <a href="http://scotch.io/tutorials/javascript/animating-angularjs-apps-ngview">Animating Your Angular Single Page App</a></p>
+  <footer class="text-center">   
+
   </footer>
   
 </body>
