--- a/angular-example/pages/about.html
+++ b/angular-example/pages/about.html
@@ -6,7 +6,8 @@
 <div class="container">
 	<label>Search for photos</label>
 	<ul class="color-list">
-		<li ng-repeat="pcolor in colors" ng-model="colors" class="color-swatch" ng-style="{'backgroundColor':pcolor}"><a href="#" ng-click="loadColorPhoto()"></a></li>
+		<!--li ng-repeat="pcolor in colors" ng-model="colors" class="color-swatch" ng-style="{'backgroundColor':pcolor}"><a ng-href="" ng-click="loadColorPhoto()"></a></li-->
+		<li ng-repeat="pcolor in colors"  class="color-swatch" ng-style="{'backgroundColor':pcolor}" ng-click="loadColorPhoto($index)"></li>
 		</ul>
 	<form>	
 	<input type="text" ng-model="photoType" placeholder="Search for photos">
